--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -1,57 +1,68 @@
-accelerate==0.27.2
-torchsde==0.2.6
-typer==0.12.3
-fsspec==2024.3.1
-trimesh==4.4.0
-einops==0.8.0
-termcolor==2.4.0
-fairscale==0.4.13
-torchvision==0.18.0+cu121
+pilgram==1.2.1
+librosa==0.10.2.post1
+mediapipe==0.10.14
+transformers==4.38.2
+protobuf==4.25.3
 matplotlib==3.9.0
-kornia==0.7.2
-iopath==0.1.10
-rembg==2.0.57
-torchaudio==2.3.0+cu121
-aiofiles==23.2.1
+timm==0.6.13
+tifffile==2024.5.22
+pycocotools==2.0.7
+rich==13.7.1
 numexpr==2.10.0
+trimesh==4.4.0
+addict==2.4.0
+numpy==1.26.4
+fairscale==0.4.13
+PyYAML==6.0.1
+lark==1.1.9
+scipy==1.13.1
+typer==0.12.3
+pixeloe==0.0.10
+fastapi==0.111.0
 safetensors==0.4.3
 pandas==2.2.2
-rich==13.7.1
-aiohttp==3.9.5
-piexif==1.1.3
+torchsde==0.2.6
+loguru==0.7.2
+starlette==0.37.2
+pyzbar==0.1.9
+numba==0.59.1
+uvicorn==0.29.0
+onnxruntime==1.18.0
+yapf==0.40.2
+joblib==1.4.2
+cachetools==5.3.3
+torchaudio==2.3.0+cu121
 omegaconf==2.3.0
-scipy==1.13.1
-tifffile==2024.5.22
-librosa==0.10.2.post1
-tabulate==0.9.0
-numpy==1.26.4
-GitPython==3.1.43
-setuptools==69.5.1
-python-dotenv==1.0.1
-mediapipe==0.10.14
-pilgram==1.2.1
+fvcore==0.1.5.post20221221
+einops==0.8.0
+torchvision==0.18.0+cu121
+termcolor==2.4.0
+regex==2024.5.15
+compel==2.0.2
 ftfy==6.2.0
 torchmetrics==0.11.4
-lark==1.1.9
-yacs==0.1.8
-pixeloe==0.0.10
-tqdm==4.66.4
-addict==2.4.0
-yapf==0.40.2
-regex==2024.5.15
-onnxruntime==1.18.0
-spandrel==0.3.4
 torch==2.3.0+cu121
-fvcore==0.1.5.post20221221
-compel==2.0.2
-joblib==1.4.2
-timm==0.6.13
+wget==3.2
 imageio==2.34.1
-PyYAML==6.0.1
+anyio==4.4.0
+piexif==1.1.3
+tqdm==4.66.4
+yacs==0.1.8
+aiofiles==23.2.1
+blend_modes==2.1.0
+accelerate==0.27.2
+pydantic==2.7.1
+spandrel==0.3.4
+tabulate==0.9.0
+python-dotenv==1.0.1
+setuptools==69.5.1
+kornia==0.7.2
+aiohttp==3.9.5
 prettytable==3.10.0
-transformers==4.38.2
-numba==0.59.1
-pycocotools==2.0.7
+GitPython==3.1.43
+iopath==0.1.10
+PyMatting==1.1.12
+fsspec==2024.3.1
 open-clip-torch==2.24.0
 lightning==2.2.5
 insightface==0.7.3
