--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,9 @@ venv/
 !/web/extensions/logging.js.example
 !/web/extensions/core/
 /tests-ui/data/object_info.json
-# /user/ # middlek
+/user
 *.log
 /client_app/
 !client_app/test_wf/
 !client_app/client.py
+make_example_image_grid.ipynb
