--- a/bridge_server/.env
+++ b/bridge_server/.env
@@ -3,6 +3,7 @@ PORT=8000
 COMFYUI_SERVERS=127.0.0.1:8188,127.0.0.1:8189,127.0.0.1:8190,127.0.0.1:8191
 LOGGING_LEVEL=INFO
 CURRENT_STATE=./current_state.json
+WORKFLOW_ALIAS=./workflow_alias.json
 COMFYUI_DIR=..
 WORKFLOW_DIR=workflows
 LIMIT_TIMEOUT_COUNT=50
